RESOLVED FIXED281588
[WGSL] shader,validation,shader_io,align:* is failing
https://bugs.webkit.org/show_bug.cgi?id=281588
Summary [WGSL] shader,validation,shader_io,align:* is failing
Tadeu Zagallo
Reported 2024-10-16 10:42:46 PDT
...
Attachments
Tadeu Zagallo
Comment 1 2024-10-16 10:42:48 PDT
Tadeu Zagallo
Comment 2 2024-10-16 10:45:50 PDT
EWS
Comment 3 2024-10-17 05:06:00 PDT
Committed 285327@main (c5a93258333f): <https://commits.webkit.org/285327@main> Reviewed commits have been landed. Closing PR #35292 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.