[WGSL] shader,validation,shader_io,align:* is failing https://bugs.webkit.org/show_bug.cgi?id=281588 rdar://135984013

Reviewed by Mike Wyrzykowski.

Add validation for the "required alignment" according to the spec[1], which requires
validating the offset of struct members as well as array strides.

[1]: https://www.w3.org/TR/WGSL/#requiredalignof

* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::visit):
(WGSL::AttributeValidator::validateAlignment):
* Source/WebGPU/WGSL/Types.cpp:
(WGSL::Types::Array::stride const):
* Source/WebGPU/WGSL/Types.h:
* Source/WebGPU/WGSL/tests/invalid/required-alignment.wgsl: Added.

Canonical link: https://commits.webkit.org/285327@main